--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Sergio/Desktop/CC/JAR+Lib/lib/pteidlibj.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Sergio/Desktop/CC/JAR+Lib/CartaoCidadaoNovo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sergio/Desktop/CC/JAR+Lib/CartaoCidadaoNovo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sergio/Desktop/CC/JAR+Lib/lib/pteidlibj.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
